[gd_scene load_steps=4 format=2]

[ext_resource path="res://DATExplorer/DATExplorer.gd" type="Script" id=1]
[ext_resource path="res://DATExplorer/Filter.tscn" type="PackedScene" id=3]
[ext_resource path="res://SubfilePreview.tscn" type="PackedScene" id=4]

[node name="DATExplorerContainer" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -359.0
offset_right = 640.0
offset_bottom = 361.0
script = ExtResource( 1 )

[node name="DATTree" type="Tree" parent="."]
visible = false
offset_top = 56.0
offset_right = 1280.0
offset_bottom = 306.0
custom_minimum_size = Vector2( 1, 250 )
columns = 4

[node name="Filters" type="HBoxContainer" parent="."]
visible = false
offset_right = 1280.0
offset_bottom = 98.0

[node name="Type" parent="Filters" instance=ExtResource( 3 )]

[node name="Group" parent="Filters" instance=ExtResource( 3 )]
offset_left = 68.0
offset_right = 132.0

[node name="Instance" parent="Filters" instance=ExtResource( 3 )]
offset_left = 136.0
offset_right = 200.0

[node name="ApplyFilter" type="Button" parent="Filters"]
offset_left = 204.0
offset_right = 293.0
offset_bottom = 98.0
text = "Apply filters"

[node name="SubfilePreview" parent="." instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1280.0
offset_bottom = 14.0

[connection signal="item_selected" from="DATTree" to="." method="_on_DATTree_item_selected"]
[connection signal="pressed" from="Filters/ApplyFilter" to="." method="_on_ApplyFilter_pressed"]
